# ibc-apps

./: .codespellrc  .gitignore  .golangci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  go.work  go.work.example  go.work.sum  refork-status.sh  tag.sh
.github/: dependabot.yml  labeler.yml  markdown-link-check-config.json  mergify.yml  strangelove-project-management.yml
.github/workflows/: async-icq.yaml  async-icq.yml  cw_audit_dependencies.yml  golangci-lint.yaml  golangci.yaml  golangci.yml  ibc-hooks.yaml  ibc-hooks.yml  markdown-linter.yaml  mispell.yml  packet-forward-middleware.yaml  packet-forward-middleware.yml  polytone-artifacts.yml  polytone.yaml  polytone_audit_dependencies.yml  polytone_release.yaml  pr-labeler.yml  rate-limiting.yml  strangelove-project-management.yml  test.yml
cosmwasm/polytone/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cw-orch-state.json  justfile
cosmwasm/polytone/.cargo/: audit.toml
cosmwasm/polytone/.github/workflows/: artifacts.yml  audit_dependencies.yml
cosmwasm/polytone/contracts/accessories/listener/: Cargo.toml
cosmwasm/polytone/contracts/accessories/listener/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
cosmwasm/polytone/contracts/accessories/polytone-tester/: Cargo.toml
cosmwasm/polytone/contracts/accessories/polytone-tester/.cargo/: config
cosmwasm/polytone/contracts/accessories/polytone-tester/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
cosmwasm/polytone/contracts/main/note/: Cargo.toml
cosmwasm/polytone/contracts/main/note/src/: contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  state.rs  tests.rs
cosmwasm/polytone/contracts/main/note/src/suite_tests/: suite.rs  tests.rs
cosmwasm/polytone/contracts/main/proxy/: Cargo.toml
cosmwasm/polytone/contracts/main/proxy/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
cosmwasm/polytone/contracts/main/voice/: Cargo.toml
cosmwasm/polytone/contracts/main/voice/src/: contract.rs  error.rs  ibc.rs  msg.rs  state.rs
cosmwasm/polytone/contracts/main/voice/src/suite_tests/: mod.rs  suite.rs  tests.rs
cosmwasm/polytone/devtools/: optimize.sh
cosmwasm/polytone/tests/: README.md
cosmwasm/polytone/tests/simtests/: account.go  contract.go  functionality_suite.go  functionality_test.go  go.mod  go.sum  unmarshal.go  wasm_msg.go
cosmwasm/polytone/tests/strangelove/: go.mod  go.sum  incompatible_handshake_test.go  out_of_gas_test.go  suite.go  types.go
docs/: README.md
examples/: README.md
middleware/: README.md
middleware/packet-forward-middleware/: Dockerfile  Makefile  README.md  go.mod  go.sum  test_node.sh
middleware/packet-forward-middleware/docs/: integration.md
middleware/packet-forward-middleware/e2e/: forward_timeout_test.go  go.mod  go.sum  packet_forward_non_refundable_test.go  packet_forward_test.go  query.go  setup.go  storage_leak_test.go  unnecessary_loop_test.go  upgrade_test.go  utils.go
middleware/packet-forward-middleware/packetforward/: ibc_middleware.go  module.go  module_test.go
middleware/packet-forward-middleware/proto/: buf.yaml
middleware/packet-forward-middleware/router/: ibc_middleware.go  module.go  module_test.go
middleware/packet-forward-middleware/scripts/: protocgen.sh
middleware/packet-forward-middleware/test/: address.go  setup.go
middleware/staking-middleware/: README.md  go.mod
middleware/staking-middleware/scripts/: protocgen.sh
middleware/staking-middleware/staking/: ibc_middleware.go  module.go
modules/: README.md
modules/async-icq/: .Makefile.swp  Dockerfile  Dockerfile.icq  Dockerfile.icq-demo  Makefile  README.md  go.mod  go.sum  ibc_module.go  ibc_module_test.go  module.go
modules/async-icq/e2e/: go.mod  go.sum  icq_test.go  setup.go  upgrade_test.go
modules/async-icq/keeper/: cache_ctx.go  events.go  genesis.go  genesis_test.go  grpc_query.go  grpc_query_test.go  keeper.go  keeper_test.go  migrator.go  msg_server.go  params.go  params_test.go  relay.go  relay_test.go
modules/async-icq/proto/: buf.yaml
modules/async-icq/scripts/: protocgen.sh
modules/async-icq/types/: codec.go  errors.go  expected_keepers.go  genesis.go  genesis.pb.go  genesis_test.go  icq.pb.go  keys.go  keys_test.go  packet.pb.go  params.go  params_legacy.go  params_test.go  query.pb.go  query.pb.gw.go  tx.pb.go
modules/async-icq/utils/: cache_ctx.go
modules/ibc-hooks/: .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum  hooks.go  ibc_module.go  ics4_middleware.go  sdkmodule.go  wasm_hook.go
modules/ibc-hooks/e2e/: go.mod  go.sum  helpers.go  ibchooks_test.go
modules/ibc-hooks/keeper/: keeper.go  msg_server.go
modules/ibc-hooks/proto/: buf.yaml
modules/ibc-hooks/scripts/: protocgen.sh
modules/ibc-hooks/simapp/: ante.go  app.go  encoding.go  export.go  simulation_test.go  test_helpers.go
modules/ibc-hooks/tests/: module_test.go
modules/ibc-hooks/tests/unit/testdata/counter/: Cargo.toml  README.md
modules/ibc-hooks/tests/unit/testdata/counter/artifacts/: checksums.txt  counter.wasm
modules/ibc-hooks/types/: genesis.go  genesis.pb.go  ibc_hooks.pb.go  keys.go  params.go  query.pb.go  query.pb.gw.go  tx.pb.go
modules/rate-limiting/: Dockerfile  LICENSE  Makefile  README.md  depinject.go  go.mod  go.sum  ibc_middleware.go  module.go
modules/rate-limiting/e2e/: go.mod  go.sum
modules/rate-limiting/keeper/: abci.go  abci_test.go  blacklist.go  epoch.go  epoch_test.go  events.go  flow.go  flow_test.go  genesis.go  genesis_test.go  grpc_query.go  grpc_query_test.go  keeper.go  keeper_test.go  migrator.go  migrator_test.go  msg_server.go  msg_server_test.go  packet.go  packet_test.go  params.go  pending_send.go  pending_send_test.go  rate_limit.go  rate_limit_test.go  whitelist.go  whitelist_test.go
modules/rate-limiting/proto/: buf.gen.pulsar.yaml
modules/rate-limiting/ratelimit/: module.go
modules/rate-limiting/scripts/: generate.sh  protocgen.sh
modules/rate-limiting/types/: codec.go  denom_helpers.go  errors.go  expected_keepers.go  flow_test.go  genesis.go  genesis.pb.go  keys.go  (+9 more)
tools/: resolve-module.sh  resolve-modules.sh
(+253 files in other folders)
